refactor: use stream().toList() for cleaner and modern list conversion
- Replaced usage of stream().collect(Collectors.toList()) with stream().toList() in JavaFileParser for improved readability and simplicity.